# MLeml

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
docs/: api.md  examples.md  method.md  release.md  trusted-publisher.md
src/mleml/: __init__.py  core.py  predictor.py  tree.py
tests/: test_eml.py  test_examples.py  test_predict_recovery.py
