[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mleml"
version = "0.1.0"
description = "Symbolic regression with a single EML binary operator."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "art22017"},
]
keywords = ["symbolic regression", "machine learning", "elementary functions", "eml", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "matplotlib>=3.8",
  "pytest>=8.0",
  "twine>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
